- add workflow - fix test cases